--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -179,10 +179,9 @@ android {
 }
 
 dependencies {
-    implementation project(':@react-native-community_async-storage')
-    implementation project(':react-native-square-in-app-payments')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation "com.squareup.sdk.in-app-payments:card-entry:1.3.0"
 
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
