--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.82",
+    "@react-native-community/async-storage": "^1.9.0",
     "@react-native-community/masked-view": "^0.1.7",
     "@react-navigation/drawer": "^5.1.1",
     "@react-navigation/native": "^5.0.9",
@@ -26,14 +26,17 @@
     "react": "16.9.0",
     "react-dom": "^16.13.0",
     "react-native": "0.61.5",
+    "react-native-blur": "^3.2.2",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-paper": "^3.6.0",
     "react-native-popup-menu": "^0.15.7",
     "react-native-reanimated": "^1.7.0",
+    "react-native-restart": "^0.0.14",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.3.0",
     "react-native-simple-radio-button": "^2.7.4",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-square-in-app-payments": "^1.3.1",
     "react-native-stripe-api": "^0.1.0",
     "react-native-vector-icons": "^6.6.0",
